# bot

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pom.xml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
crates/bot/: Cargo.toml
crates/bot/src/: command.rs  lib.rs  routes.rs  state.rs
crates/bot/src/command/: ball.rs  dice.rs  help.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/cli/src/cli/: bot.rs  config.rs
crates/cli/src/cli/config/: env.rs
crates/lib/: Cargo.toml
crates/lib/src/: dice.rs  lib.rs
crates/lib/tests/: parse_text.rs
scripts/: docker-image.sh
scripts/.githooks/: pre-commit
src/main/java/me/telegram/borken_bot/: App.java  Constants.java  GMBot.java
src/main/java/me/telegram/borken_bot/commands/: AbsCommand.java  Dice.java  Help.java  MagicBall.java
src/main/java/me/telegram/borken_bot/lib/: Messenger.java  Utils.java
src/test/java/lib/: TestUtils.java
src/test/java/me/telegram/borken_bot/commands/: DiceTest.java  HelpTest.java  MagicBallTest.java
src/test/java/me/telegram/borken_bot/lib/: UtilsTest.java
