[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
description = ""
authors = ["zoobestik <kb.chernenko@gmail.com>"]
keywords = ["telegram", "bot", "cli"]
version = "2.0.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/zoobestik/bot"
homepage = "https://github.com/zoobestik/bot"
#documentation = "https://docs.rs/votch"
#categories = ["command-line-utilities"]
#readme = "README.md"
publish = false

[workspace.dependencies]
teloxide = { version = "^0.17.0", features = ["macros", "sqlite-storage-nativetls"] }
