[package]
name = "bot_core"
version.workspace = true
description = ""
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
teloxide.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
bot_lib = { path = "../lib" }
