[package]
name = "bot_core"
version.workspace = true
description = "A chat entertainment and tabletop utilities Telegram bot core components."
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
teloxide.workspace = true
serde = { version = "^1.0.219", features = ["derive"] }
bot_lib = { path = "../lib" }
