[package]
name = "bot_lib"
version.workspace = true
description = "Library utilities for Telegram Dice and Divination Bot written in Rust"
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rand = "^0.9.2"